<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>

    <TextView
        android:id="@+id/crop_recomend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />
    
    <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp">
        <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF985B"
            android:weightSum="4">
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="সারের নাম" /> 
                
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/sar_amm_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="সারের  পরিমাণ" /> 
                
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="সার প্রয়োগ পদ্ধতি" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

        </TableRow>

                <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/urea_sar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/urea" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/urea_amm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/urea_app"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

        </TableRow>
        
                <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/tsp_sar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/tsp" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/tsp_amm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/tsp_app"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/others_application" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

        </TableRow>
        
                <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/mop_sar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/mop" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/mop_amm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/mop_app"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/others_application" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

        </TableRow>
                <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/gipsum_sar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/gipsum" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/gipsum_amm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="TextView" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/gipsum_app"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/others_application" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

        </TableRow>
                <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/compost"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/compost" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/compost_amm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/compost_amm" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

            <TextView
                android:id="@+id/compost_app"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/others_application" />
            
            <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />

        </TableRow>
                <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"       
   android:background="#000000"/>
    </TableLayout>

</LinearLayout>
